force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>Strength of students.</description>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>