force-app/main/default/objects/Student__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <description>Date of admission</description>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>