force-app/main/default/objects/Student__c/fields/Student_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Email_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Personal email id will be used to communicate updates related to admissions</description>
    <externalId>true</externalId>
    <label>Student Email Id</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>