force-app/main/default/objects/Student__c/validationRules/Invalid_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Email_Format</fullName>
    <active>true</active>
    <description>Please enter email id in the format of xyz@gmail.com</description>
    <errorConditionFormula>ISBLANK(Student_Email_Id__c)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Please enter email id in the format of xyz@gmail.com</errorMessage>
</ValidationRule>